--- a/cards/card01.Rmd
+++ b/cards/card01.Rmd
@@ -41,7 +41,7 @@ You have become a top performer this month for the measure [postoperative nausea
 
 ```{r figureA, results='hide', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_A$run(recipient, data, list())
+  card_env_A$run(recipient, data)
 ```
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
@@ -65,7 +65,7 @@ You have become a top performer this month for the measure [postoperative nausea
 
 ```{r figureB, results='hide', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_B$run(recipient, data, list())
+  card_env_B$run(recipient, data, "Peer Ave.")
 ```
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
