--- a/cards/card03.Rmd
+++ b/cards/card03.Rmd
@@ -41,7 +41,7 @@ You are a top performer this month for the measure [postoperative nausea and vom
 
 ```{r figureA, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_A$run(recipient, data, list())
+  card_env_A$run(recipient, data)
 ```
 
 
