--- a/cards/card07.Rmd
+++ b/cards/card07.Rmd
@@ -62,7 +62,7 @@ You are not a top performer this month for the measure [postoperative nausea and
 
 ```{r figureB, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_B$run(recipient, data, list())
+  card_env_B$run(recipient, data)
 ```
 
 
