--- a/cards/card08.Rmd
+++ b/cards/card08.Rmd
@@ -49,7 +49,7 @@ You may have an opportunity to improve your performance for the measure [postope
 
 ```{r figureA, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_A$run(recipient, data, list())
+  card_env_A$run(recipient, data)
 ```
 
 
