--- a/cards/card09.Rmd
+++ b/cards/card09.Rmd
@@ -41,7 +41,7 @@ You are a consistent top performer for the measure of [postoperative nausea and 
 
 ```{r figureA, results='hide', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_A$run(recipient, data, list())
+  card_env_A$run(recipient, data)
 ```
 
 
@@ -66,7 +66,7 @@ You are a consistent top performer for the measure of [postoperative nausea and 
 
 ```{r figureB, results='hide', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_B$run(recipient, data, list())
+  card_env_B$run(recipient, data)
 ```
 
 
