--- a/cards/card11.Rmd
+++ b/cards/card11.Rmd
@@ -59,7 +59,7 @@ You are a top performer this month for the measure [postoperative nausea and vom
 
 ```{r figureB, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_B$run(recipient, data, list())
+  card_env_B$run(recipient, data)
 ```
 
 
