--- a/cards/card15.Rmd
+++ b/cards/card15.Rmd
@@ -39,7 +39,7 @@ You are not a top performer this month for the measure [postoperative nausea and
 
 ```{r figureA, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_A$run(recipient, data, list())
+  card_env_A$run(recipient, data)
 ```
 
 
