--- a/cards/card08.Rmd
+++ b/cards/card08.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 # Load the source code for the figure of card A
 card_env_A <- new.env()
-source(file='fig_comp_bar.R', local=card_env_A)
+source(file='fig_one_bar.R', local=card_env_A)
 
 # No figure for card B
 
